--- a/css/m-head.css
+++ b/css/m-head.css
@@ -20,10 +20,24 @@
 .col-9-10{
 	width:90%;
 }
+.container{
+width: 95%;
+min-height: 1000px;
+min-width: 660px;
+max-width: 1000px;
+border-left: 2px solid black;
+border-right: 2px solid black;
+background: #FEFEFE;
+padding-bottom: 30px;
+padding-left: 15px 5%;
+padding-right: 15px 5%;
+margin-right: auto;
+margin-left: auto;
+}
 .wrap-main {
     max-width: 1200px;
-
-    width: 100%;
+/*
+    width: 100%;*/
     height: 59px;
     margin: auto;
     margin-top:-4px;
@@ -127,6 +141,21 @@ nav a {
     margin: 0px auto 3px;
     width: 22px;
     height: 24px;
+}
+a.back-to-top {
+	display: none;
+	width: 60px;
+	height: 60px;
+	text-indent: -9999px;
+	position: fixed;
+	z-index: 999;
+	right: 40px;
+	bottom: 60px;
+	background: #27AE61 url("/didong/images/up-arrow.png") no-repeat center 43%;
+	-webkit-border-radius: 30px;
+	-moz-border-radius: 30px;
+	border-radius: 30px;
+	outline:none;
 }
 
 
