--- a/css/m-head.css
+++ b/css/m-head.css
@@ -251,3 +251,25 @@ a.back-to-top {
     float: right;
 }
 
+.btn__ {
+	background: #47A9EB -moz-linear-gradient(center top , transparent, rgba(14, 74, 113, 0.2)) repeat scroll 0% 0%;
+    border-radius: 3px;
+	float: left;
+position: relative;
+margin-right: 10px;
+padding: 0px 13px 0px 10px;
+cursor: pointer;
+height: 36px;
+line-height: 36px;
+border: 0px none;
+outline: 0px none;
+box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.25), 0px 2px 0px 0px rgba(0, 0, 0, 0.15), 0px 0px 0px 1px rgba(0, 83, 138, 0.6), 0px 0px 0px 1px rgba(255, 255, 255, 0.15) inset;
+}
+.btn__ span {
+    display: block;
+    font-size: 12px;
+    color: #FFF;
+    text-transform: none;
+    font-weight: 300;
+}
+
