--- a/css/dtdd.css
+++ b/css/dtdd.css
@@ -206,12 +206,20 @@ img {
     border-radius: 14px;
 }
 
-.buynow span {
+.buynow:active span,.buynow span {
     display: block;
     font-size: 12px;
-    color: #FFF;
+    color: #FFF ;
     text-transform: none;
     font-weight: 300;
+}
+.buynow:hover{
+cursor: pointer;
+background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#f05e0b), to(#ef8d02));
+background: -webkit-linear-gradient(top, #ef8d02, #f05e0b);
+background: -moz-linear-gradient(top, #ef8d02, #f05e0b);
+background: -ms-linear-gradient(top, #ef8d02, #f05e0b);
+background: -o-linear-gradient(top, #ef8d02, #f05e0b)
 }
  .buynow {
     display: block;
@@ -220,12 +228,16 @@ img {
     width: 94.37%;
     font-size: 18px;
     font-weight: 600;
-    color: #FFF;
+    color: #FFF !important;
     text-transform: uppercase;
     text-align: center;
     border: 1px solid #D97F00;
     border-radius: 4px;
     background: transparent -moz-linear-gradient(center top , #F89406, #F76B1C) repeat scroll 0% 0%;
+    background: -webkit-linear-gradient(top, #f89406, #f76b1c);
+	background: -moz-linear-gradient(top, #f89406, #f76b1c);
+	background: -ms-linear-gradient(top, #f89406, #f76b1c);
+	background: -o-linear-gradient(top, #f89406, #f76b1c)
 }
 .wrap-right-pd {
     background-color: #FFF;
