--- a/css/m-head.css
+++ b/css/m-head.css
@@ -254,6 +254,14 @@ a.back-to-top {
 .btn__ {
 	background: #47A9EB -moz-linear-gradient(center top , transparent, rgba(14, 74, 113, 0.2)) repeat scroll 0% 0%;
     border-radius: 3px;
+    background: #47A9EB;
+    background-image: -webkit-linear-gradient(top, transparent, rgba(14, 74, 113, .2));
+    background-image: -moz-linear-gradient(top, transparent, rgba(14, 74, 113, .2));
+background-image: -ms-linear-gradient(top, transparent, rgba(14, 74, 113, .2));
+background-image: -o-linear-gradient(top, transparent, rgba(14, 74, 113, .2));
+background-image: linear-gradient(top, transparent, rgba(14, 74, 113, .2));
+text-shadow: 0 -1px 0 rgba(0, 0, 0, .3);
+    color: #fff;
 	float: left;
 position: relative;
 margin-right: 10px;
@@ -267,9 +275,9 @@ box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.25), 0px 2px 0px 0px rgba(0, 0, 0, 0
 }
 .btn__ span {
     display: block;
-    font-size: 12px;
+    font-size: 18px;
     color: #FFF;
     text-transform: none;
-    font-weight: 300;
+    font-weight: 600;
 }
 
